# multi-threaded-sensors-simulation

./: .gitignore  CMakeLists.txt  README.md  STRUCT.md  main.cpp
data/20250615_101736_data/: gnss.csv  imu.csv
flowcharts/fdir/: Fdir.drawio
flowcharts/processing/: Processing.drawio
flowcharts/sensors/: Sensors.drawio
flowcharts/simulator/: Simulator.drawio
include/fdir/: Fdir.hpp
include/logging/: Logger.hpp
include/processing/: ProcessingUnit.hpp
include/sensors/: GnssSensor.hpp  ImuSensor.hpp  Sensor.hpp
include/simulator/: Simulator.hpp
scripts/: plot_sensor_data.py
src/fdir/: Fdir.cpp
src/logging/: Logger.cpp
src/processing/: ProcessingUnit.cpp
src/sensors/: GnssSensor.cpp  ImuSensor.cpp
src/simulator/: Simulator.cpp
uml/: uml.puml
